@@ -103,12 +103,12 @@ public class CraftingDisplay extends Display {
 			refreshData();
 		}
 
-		if (input.isClicked("menu") || (isPersonalCrafter && input.isClicked("craft"))) {
+		if (input.getKey("menu").clicked || (isPersonalCrafter && input.getKey("craft").clicked)) {
 			Game.exitDisplay();
 			return;
 		}
 
-		if ((input.isClicked("select") || input.isClicked("attack")) && recipeMenu.getSelection() >= 0) {
+		if ((input.getKey("select").clicked || input.getKey("attack").clicked) && recipeMenu.getSelection() >= 0) {
 			// check the selected recipe
 			if (recipes.length == 0) return;
 			Recipe selectedRecipe = recipes[recipeMenu.getSelection()];
