@@ -153,8 +153,8 @@ public class Menu {
 		if(!selectable || entries.size() == 0) return;
 
 		int prevSel = selection;
-		if (input.isClicked("cursor-up")) selection--;
-		if (input.isClicked("cursor-down")) selection++;
+		if (input.getKey("cursor-up").clicked) selection--;
+		if (input.getKey("cursor-down").clicked) selection++;
 		if (input.getKey("shift-cursor-up").clicked && selectionSearcher == 0) selectionSearcher -= 2;
 		if (input.getKey("shift-cursor-down").clicked && selectionSearcher == 0) selectionSearcher += 2;
 		if (prevSel != selection && selectionSearcher != 0) selection = prevSel;
