@@ -47,7 +47,7 @@ public class PlayerInvDisplay extends Display {
 	public void tick(InputHandler input) {
 		super.tick(input);
 
-		if(input.isClicked("menu")) {
+		if(input.getKey("menu").clicked) {
 			Game.exitDisplay();
 			return;
 		}
@@ -60,7 +60,7 @@ public class PlayerInvDisplay extends Display {
 
 			Inventory from, to;
 			if (selection == 0) {
-				if (input.isClicked("attack") && menus[0].getNumOptions() > 0) {
+				if (input.getKey("attack").clicked && menus[0].getNumOptions() > 0) {
 					player.activeItem = player.getInventory().remove(menus[0].getSelection());
 					Game.exitDisplay();
 					return;
@@ -97,7 +97,7 @@ public class PlayerInvDisplay extends Display {
 				Item fromItem = from.get(fromSel);
 
 				boolean transferAll;
-				if (input.isClicked("attack")) { // If stack limit is available, this can transfer whole stack
+				if (input.getKey("attack").clicked) { // If stack limit is available, this can transfer whole stack
 					transferAll = !(fromItem instanceof StackableItem) || ((StackableItem)fromItem).count == 1;
 				} else return;
 
@@ -112,7 +112,7 @@ public class PlayerInvDisplay extends Display {
 			}
 
 		} else {
-			if (input.isClicked("attack") && menus[0].getNumOptions() > 0) {
+			if (input.getKey("attack").clicked && menus[0].getNumOptions() > 0) {
 				player.activeItem = player.getInventory().remove(menus[0].getSelection());
 				Game.exitDisplay();
 			}
